--- a/views/regarder.ejs
+++ b/views/regarder.ejs
@@ -53,8 +53,8 @@
 		<!-- Main -->
 		<article id="main">
 			<header>
-			</br>
-		</br>
+				</br>
+				</br>
 				<h2>Regarder</h2>
 
 			</header>
@@ -76,143 +76,108 @@
 								<div class="3u"><span class="image fit"><a onclick="changeSrc('https://www.youtube.com/embed/2iqeHieanDU')"><img src="images/yt-temp1.jpg" alt=""></a></span></div>
 								<div class="3u"><span class="image fit"><a onclick="changeSrc('https://www.youtube.com/embed/49NYaaXz15s')"><img src="images/yt-temp2.jpg" alt=""></a></span></div>
 								<div class="3u"><span class="image fit"><a onclick="changeSrc('https://www.youtube.com/embed/WnfnvIjuYTk')"><img src="images/yt-ventre.jpg" alt=""></a></span></div>
-								</div>
+							</div>
 						</div>
 
 						<a href="https://www.echosciences-bretagne.bzh/articles/mon-aventure-happy-hour" target="_blank">Mon aventure partagée sur le site d'Echoscience Bretagne.</a>
 						<br>
 						<br>
-<h5>Partenaires</h5>
-<div class="box alt">
-	<div class="row uniform 50%">
-		<div class="3u"><span class="image fit"><img src="https://www.economie.gouv.fr/files/investissement_avenir_371.png" alt="investissement d'avenir"></span></div>
-		<div class="3u"><span class="image fit"><img src="http://eykstudio.com/assets/eyk-logo-square-104589e4bc8d5a4256a6ee2182dc84f65ac95f7f9f76271d93b67b4f46ce2c3b.png" alt="EYK studio"></span></div>
-		<div class="3u"><span class="image fit"><img src="http://www.lejardingraphique.com/docs/files/logo/Espace%20des%20Sciences.png" alt="espace des sciences numerique"></span></div>
-	</div>
-</div>
+						<h6>Partenaires</h6>
+						<div class="box alt">
+							<div class="row uniform 50%">
+								<div class="1u"><span class="image"><a href="http://www.enseignementsup-recherche.gouv.fr/cid55892/comprendre-le-programme-investissements-d-avenir.html" target="_blank"><img src="images/logo-inv.png" alt="investissement d'avenir" width="100%"></a></span></div>
+								<div class="1u"><span class="image"><a href="https://www.eykfrance.com/" target="_blank"><img src="images/logo-eyk.png" alt="EYK studio" width="100%"></a></span></div>
+								<div class="1u"><span class="image"><a href="https://www.espace-sciences.org/espace-numerique" target="_blank"><img src="images/logo-eds.png" alt="espace des sciences numerique" width="100%"></a></span></div>
+								<div class="1u"><span class="image"><a href="http://inmediats.fr/" target="_blank"><img src="images/logo-inm.png" alt="Inmediat" width="100%"></a></span></div>
+							</div>
+						</div>
 
-</section>
-<section>
-						<h5>Left &amp; Right</h5>
-						<p><span class="image left"><img src="images/pic04.jpg" alt=""></span>Morbi mattis mi consectetur tortor elementum, varius pellentesque velit convallis. Aenean tincidunt lectus auctor mauris maximus, ac scelerisque ipsum tempor. Duis vulputate ex et
-							ex tincidunt, quis lacinia velit aliquet. Duis non efficitur nisi, id malesuada justo. Maecenas sagittis felis ac sagittis semper. Curabitur purus leo, tempus sed finibus eget, fringilla quis risus. Maecenas et lorem quis sem varius sagittis et
-							a est. Maecenas iaculis iaculis sem. Donec vel dolor at arcu tincidunt bibendum. Interdum et malesuada fames ac ante ipsum primis in faucibus. Fusce ut aliquet justo. Donec id neque ipsum. Integer eget ultricies odio. Nam vel ex a orci fringilla
-							tincidunt. Aliquam eleifend ligula non velit accumsan cursus. Etiam ut gravida sapien. Morbi mattis mi consectetur tortor elementum, varius pellentesque velit convallis. Aenean tincidunt lectus auctor mauris maximus, ac scelerisque ipsum tempor.
-							Duis vulputate ex et ex tincidunt, quis lacinia velit aliquet. Duis non efficitur nisi, id malesuada justo. Maecenas sagittis felis ac sagittis semper. Curabitur purus leo, tempus sed finibus eget, fringilla quis risus. Maecenas et lorem quis sem
-							varius sagittis et a est. Maecenas iaculis iaculis sem. Donec vel dolor at arcu tincidunt bibendum. Interdum et malesuada fames ac ante ipsum primis in faucibus. Fusce ut aliquet justo. Donec id neque ipsum. Integer eget ultricies odio. Nam vel
-							ex a orci fringilla tincidunt. Aliquam eleifend ligula non velit accumsan cursus. Etiam ut gravida sapien.</p>
-						<p><span class="image right"><img src="images/pic05.jpg" alt=""></span>Vestibulum ultrices risus velit, sit amet blandit massa auctor sit amet. Sed eu lectus sem. Phasellus in odio at ipsum porttitor mollis id vel diam. Praesent sit amet posuere risus,
-							eu faucibus lectus. Vivamus ex ligula, tempus pulvinar ipsum in, auctor porta quam. Proin nec dui cursus, posuere dui eget interdum. Fusce lectus magna, sagittis at facilisis vitae, pellentesque at etiam. Quisque posuere leo quis sem commodo, vel
-							scelerisque nisi scelerisque. Suspendisse id quam vel tortor tincidunt suscipit. Nullam auctor orci eu dolor consectetur, interdum ullamcorper ante tincidunt. Mauris felis nec felis elementum varius. Nam sapien ante, varius in pulvinar vitae, rhoncus
-							id massa. Donec varius ex in mauris ornare, eget euismod urna egestas. Etiam lacinia tempor ipsum, sodales porttitor justo. Aliquam dolor quam, semper in tortor eu, volutpat efficitur quam. Fusce nec fermentum nisl. Aenean erat diam, tempus aliquet
-							erat. Etiam iaculis nulla ipsum, et pharetra libero rhoncus ut. Phasellus rutrum cursus velit, eget condimentum nunc blandit vel. In at pulvinar lectus. Morbi diam ante, vulputate et imperdiet eget, fermentum non dolor. Ut eleifend sagittis tincidunt.
-							Sed viverra commodo mi, ac rhoncus justo. Duis neque ligula, elementum ut enim vel, posuere finibus justo. Vivamus facilisis maximus nibh quis pulvinar. Quisque hendrerit in ipsum id tellus facilisis fermentum. Proin mauris dui.</p>
 					</section>
-
-					<h2>First gallery:</h2>
-
-					<div class="my-gallery" itemscope itemtype="http://schema.org/ImageGallery">
-
-
+					<section>
+						<h4>Dessin numérique</h4>
 
 						<div class="box alt">
 							<div class="row uniform 50%">
-								<div class="4u">
-									<figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject"><a href="images/pic01.jpg" itemprop="contentUrl" data-size="1024x1024"><span class="image fit"><img src="images/pic01.jpg" alt=""></span></div>
-  </a>
-										<figcaption itemprop="caption description">Image caption 1</figcaption>
 
-									</figure>
-								</div>
+								<div class="4u my-gallery"><span class="image fit"><figure><a href="images/bd-chat.png" itemprop="contentUrl" data-size="1000x700"><img src="images/bd-chat.png" alt="BD chat" width="100%" itemprop="thumbnail"></figure></a></span></div>
+								<div class="4u my-gallery"><span class="image fit"><figure><a href="images/bd-rat.png" itemprop="contentUrl" data-size="1000x700"><img src="images/bd-rat.png" alt="BD rat" width="100%" itemprop="thumbnail"></figure></a></span></div>
+
 							</div>
-
-
-
-
-
-
 						</div>
+					</section>
 
-						<h2>Second gallery:</h2>
+					<section>
+						<h4>Infographie 3D</h4>
 
-						<div class="my-gallery">
+						<div class="box alt">
+							<div class="row uniform 50%">
+								<div class="4u my-gallery"><span class="image fit"><figure><a href="images/bl-tri.png" itemprop="contentUrl" data-size="1000x543"><img src="images/bl-tri.png" alt="Triceratops" width="100%" itemprop="thumbnail"></figure></a></span></div>
+								<div class="4u my-gallery"><span class="image fit"><figure><a href="images/bl-poppy.png" itemprop="contentUrl" data-size="1000x543"><img src="images/bl-poppy.png" alt="Happy Hour Decor" width="100%" itemprop="thumbnail"></figure></a></span></div>
 
-							<figure>
-								<a href="images/code.svg" itemprop="contentUrl" data-size="964x1024">
-          <img src="images/code.svg" itemprop="thumbnail" alt="Image description" />
-      </a>
-								<figcaption>C'est cool le code!</figcaption>
-							</figure>
-
-
-
-
+							</div>
 						</div>
+					</section>
+					<section>
+						<h4>Matériel/Logiciels</h4>
 
-						<%- include('popup'); %>
+						<div class="box alt">
+							<div class="row uniform 50%">
+								<div class="1u"><span class="image fit"><a href="http://www.adobe.com/fr/products/photoshop.html" target="_blank"><img src="images/lg-ps.png" alt="Photoshop" ></a></span></div>
+								<div class="1u"><span class="image fit"><a href="http://www.adobe.com/fr/products/illustrator.html" target="_blank"><img src="images/lg-il.png" alt="Photoshop" ></a></span></div>
+								<div class="1u"><span class="image fit"><a href="http://www.adobe.com/fr/products/aftereffects.html" target="_blank"><img src="images/lg-ae.png" alt="Photoshop" ></a></span></div>
+								<div class="1u"><span class="image fit"><a href="http://www.adobe.com/fr/products/premiere.html" target="_blank"><img src="images/lg-pr.png" alt="Photoshop" ></a></span></div>
+								<div class="1u"><span class="image fit"><a href="http://www.adobe.com/fr/products/photoshop-lightroom.html" target="_blank"><img src="images/lg-lr.png" alt="Photoshop" ></a></span></div>
+								<div class="1u"><span class="image fit"><a href="https://www.blender.org/" target="_blank"><img src="images/lg-bl.png" alt="Photoshop" ></a></span></div>
 
 
+							</div>
+						</div>
+					</section>
 
-							<h3>Lorem ipsum dolor</h3>
-							<p>Morbi mattis mi consectetur tortor elementum, varius pellentesque velit convallis. Aenean tincidunt lectus auctor mauris maximus, ac scelerisque ipsum tempor. Duis vulputate ex et ex tincidunt, quis lacinia velit aliquet. Duis non efficitur nisi,
-								id malesuada justo. Maecenas sagittis felis ac sagittis semper. Curabitur purus leo, tempus sed finibus eget, fringilla quis risus. Maecenas et lorem quis sem varius sagittis et a est. Maecenas iaculis iaculis sem. Donec vel dolor at arcu tincidunt
-								bibendum. Interdum et malesuada fames ac ante ipsum primis in faucibus. Fusce ut aliquet justo. Donec id neque ipsum. Integer eget ultricies odio. Nam vel ex a orci fringilla tincidunt. Aliquam eleifend ligula non velit accumsan cursus. Etiam
-								ut gravida sapien.</p>
-
-							<p>Vestibulum ultrices risus velit, sit amet blandit massa auctor sit amet. Sed eu lectus sem. Phasellus in odio at ipsum porttitor mollis id vel diam. Praesent sit amet posuere risus, eu faucibus lectus. Vivamus ex ligula, tempus pulvinar ipsum in,
-								auctor porta quam. Proin nec dui cursus, posuere dui eget interdum. Fusce lectus magna, sagittis at facilisis vitae, pellentesque at etiam. Quisque posuere leo quis sem commodo, vel scelerisque nisi scelerisque. Suspendisse id quam vel tortor
-								tincidunt suscipit. Nullam auctor orci eu dolor consectetur, interdum ullamcorper ante tincidunt. Mauris felis nec felis elementum varius.</p>
-
-							<hr />
-
-							<h4>Feugiat aliquam</h4>
-							<p>Nam sapien ante, varius in pulvinar vitae, rhoncus id massa. Donec varius ex in mauris ornare, eget euismod urna egestas. Etiam lacinia tempor ipsum, sodales porttitor justo. Aliquam dolor quam, semper in tortor eu, volutpat efficitur quam. Fusce
-								nec fermentum nisl. Aenean erat diam, tempus aliquet erat.</p>
-
-							<p>Etiam iaculis nulla ipsum, et pharetra libero rhoncus ut. Phasellus rutrum cursus velit, eget condimentum nunc blandit vel. In at pulvinar lectus. Morbi diam ante, vulputate et imperdiet eget, fermentum non dolor. Ut eleifend sagittis tincidunt.
-								Sed viverra commodo mi, ac rhoncus justo. Duis neque ligula, elementum ut enim vel, posuere finibus justo. Vivamus facilisis maximus nibh quis pulvinar. Quisque hendrerit in ipsum id tellus facilisis fermentum. Proin mauris dui, at vestibulum
-								sit amet, auctor bibendum neque.</p>
-
-					</div>
+				</div>
 			</section>
 		</article>
 
 		<!-- Footer -->
 		<footer id="footer">
-			<ul class="icons">
-				<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-				<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-				<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
-			</ul>
-			<ul class="copyright">
-				<li>&copy; Fanch Cavellec</li><li>NodeJs on Raspberry Pi</li>
-			</ul>
+
+			<%- include('popup'); %>
+
+				<ul class="icons">
+					<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+					<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+					<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+				</ul>
+				<ul class="copyright">
+					<li>&copy; Fanch Cavellec</li>
+					<li>NodeJs on Raspberry Pi</li>
+				</ul>
 		</footer>
 
-		</div>
+	</div>
 
-		<!-- Scripts -->
-		<script src="js/jquery.min.js"></script>
-		<script src="js/jquery.scrollex.min.js"></script>
-		<script src="js/jquery.scrolly.min.js"></script>
-		<script src="js/skel.min.js"></script>
-		<script src="js/util.js"></script>
-		<!--[if lte IE 8]><script src="js/ie/respond.min.js"></script><![endif]-->
-		<script src="js/main.js"></script>
-		<!-- Core JS file -->
-		<script src="js/photoswipe.min.js"></script>
+	<!-- Scripts -->
+	<script src="js/jquery.min.js"></script>
+	<script src="js/jquery.scrollex.min.js"></script>
+	<script src="js/jquery.scrolly.min.js"></script>
+	<script src="js/skel.min.js"></script>
+	<script src="js/util.js"></script>
+	<!--[if lte IE 8]><script src="js/ie/respond.min.js"></script><![endif]-->
+	<script src="js/main.js"></script>
+	<!-- Core JS file -->
+	<script src="js/photoswipe.min.js"></script>
 
-		<!-- UI JS file -->
-		<script src="js/photoswipe-ui-default.min.js"></script>
-		<script src="js/swipe.js"></script>
-		<script>
- var vid = document.getElementById('videoframe');
- function changeSrc(source) {
-	 vid.src = source;
-	 vid.load();
- }
+	<!-- UI JS file -->
+	<script src="js/photoswipe-ui-default.min.js"></script>
+	<script src="js/swipe.js"></script>
+	<script>
+		var vid = document.getElementById('videoframe');
 
-		</script>
+		function changeSrc(source) {
+			vid.src = source;
+			vid.load();
+		}
+	</script>
 
 
 </body>
